--- a/src/scss/blocks/_benefits-section.scss
+++ b/src/scss/blocks/_benefits-section.scss
@@ -5,7 +5,7 @@
         position: absolute;
         bottom: rem(-25px);
         left: 18%;
-        content: url(/beats/src/img/triangle.png);
+        content: url(../../img/triangle.png);
         z-index: 100;
     }
 
