--- a/src/scss/blocks/_benefits.scss
+++ b/src/scss/blocks/_benefits.scss
@@ -16,7 +16,7 @@
         }
 
         &::before {
-            content: url(/beats/src/img/shape.png);
+            content: url(../../img/shape.png);
             position: absolute;
             top: rem(60px);
             right: 0;
