--- a/src/scss/blocks/_hide-menu.scss
+++ b/src/scss/blocks/_hide-menu.scss
@@ -57,7 +57,7 @@
 .hide-menu__close{
     width: 20px;
     height: 20px;
-    background: url(/beats/src/img/close.png) center no-repeat;
+    background: url(../../img/close.png) center no-repeat;
     position: absolute;
     right: 25px;
     top: 25px;
