--- a/src/scss/blocks/_menu-acco.scss
+++ b/src/scss/blocks/_menu-acco.scss
@@ -1,6 +1,6 @@
 .menu-acco {
     position: relative;
-    background: url('/beats/src/img/menu-bg.png') center center/cover no-repeat;
+    background: url('../../img/menu-bg.png') center center/cover no-repeat;
 }
 
   
