--- a/src/scss/blocks/_radio.scss
+++ b/src/scss/blocks/_radio.scss
@@ -13,7 +13,7 @@
             border-radius: 0;
 
             &::before {
-                background: url(/beats/src/img/checkmark.png) center center no-repeat;
+                background: url(../../img/checkmark.png) center center no-repeat;
             }
         }
 
