--- a/src/scss/blocks/_reviews-section.scss
+++ b/src/scss/blocks/_reviews-section.scss
@@ -5,7 +5,7 @@
         position: absolute;
         bottom: rem(-25px);
         left: 19%;
-        content: url(/beats/src/img/round.png);
+        content: url(../../img/round.png);
     }
 
     &__title {
