--- a/src/scss/blocks/_shop-section.scss
+++ b/src/scss/blocks/_shop-section.scss
@@ -7,7 +7,7 @@
         position: absolute;
         bottom: rem(-25px);
         right: 18%;
-        content: url(/beats/src/img/Rectangle1.png);
+        content: url(../../img/Rectangle1.png);
     }
 }
 
