--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,7 +15,7 @@ $light-gray: #F5F5F5;
 
 $z-fixed-menu: 100;
 @import '../scss/blocks/_media.scss';
-@import url(/beats/src/css/normalize.css);
+@import url(/beats/css/normalize.css);
 
 @import '../scss/blocks/_base.scss';
 @import '../scss/blocks/_hero.scss';
