--- a/src/scss/blocks/_order-section.scss
+++ b/src/scss/blocks/_order-section.scss
@@ -1,12 +1,12 @@
 .order-section {
-    background: url(/beats/src/img/bg_form.png) bottom center no-repeat;
+    background: url(../../img/bg_form.png) bottom center no-repeat;
     position: relative;
 
     &::before {
         position: absolute;
         top: rem(-25px);
         right: 19%;
-        content: url(/beats/src/img/Polygon.png);
+        content: url(../../img/Polygon.png);
     }
 
     @include tablets {
