--- a/src/scss/blocks/_video.scss
+++ b/src/scss/blocks/_video.scss
@@ -99,7 +99,7 @@
     outline: none;
     cursor: pointer;
     transition: all 0.1s ease-out;
-    background: url("/beats/src/img/playsm.png") center center / cover no-repeat;
+    background: url("../../img/playsm.png") center center / cover no-repeat;
     width: rem(10px);
     height: rem(15px);
   
